--- a/pib.html
+++ b/pib.html
@@ -5,6 +5,7 @@
        
        <title>pngimagesbazaar</title>
        <link type="text/css" rel="stylesheet" href="pib.css"> 
+         <meta name="viewport" content="width=device-width,initial-scale=1.0">
     
    </head>
  
